crates/php-parser/tests/snapshots/match_expression_tests__match_string_keys.snap
---
source: tests/match_expression_tests.rs
assertion_line: 232
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Variable {
                        name: Span {
                            start: 22,
                            end: 28,
                        },
                        span: Span {
                            start: 22,
                            end: 28,
                        },
                    },
                    arms: [
                        MatchArm {
                            conditions: Some(
                                [
                                    String {
                                        value: [
                                            39,
                                            102,
                                            111,
                                            111,
                                            39,
                                        ],
                                        span: Span {
                                            start: 36,
                                            end: 41,
                                        },
                                    },
                                ],
                            ),
                            body: Integer {
                                value: [
                                    49,
                                ],
                                span: Span {
                                    start: 45,
                                    end: 46,
                                },
                            },
                            span: Span {
                                start: 36,
                                end: 46,
                            },
                        },
                        MatchArm {
                            conditions: Some(
                                [
                                    String {
                                        value: [
                                            39,
                                            98,
                                            97,
                                            114,
                                            39,
                                        ],
                                        span: Span {
                                            start: 52,
                                            end: 57,
                                        },
                                    },
                                ],
                            ),
                            body: Integer {
                                value: [
                                    50,
                                ],
                                span: Span {
                                    start: 61,
                                    end: 62,
                                },
                            },
                            span: Span {
                                start: 52,
                                end: 62,
                            },
                        },
                        MatchArm {
                            conditions: Some(
                                [
                                    String {
                                        value: [
                                            39,
                                            98,
                                            97,
                                            122,
                                            39,
                                        ],
                                        span: Span {
                                            start: 68,
                                            end: 73,
                                        },
                                    },
                                ],
                            ),
                            body: Integer {
                                value: [
                                    51,
                                ],
                                span: Span {
                                    start: 77,
                                    end: 78,
                                },
                            },
                            span: Span {
                                start: 68,
                                end: 78,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 82,
                    },
                },
                span: Span {
                    start: 6,
                    end: 82,
                },
            },
            span: Span {
                start: 6,
                end: 83,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 83,
    },
}
