crates/php-parser/tests/snapshots/match_expression_tests__match_with_array_creation.snap
---
source: tests/match_expression_tests.rs
assertion_line: 183
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Variable {
                        name: Span {
                            start: 22,
                            end: 28,
                        },
                        span: Span {
                            start: 22,
                            end: 28,
                        },
                    },
                    arms: [
                        MatchArm {
                            conditions: Some(
                                [
                                    Integer {
                                        value: [
                                            49,
                                        ],
                                        span: Span {
                                            start: 36,
                                            end: 37,
                                        },
                                    },
                                ],
                            ),
                            body: Array {
                                items: [
                                    ArrayItem {
                                        key: None,
                                        value: String {
                                            value: [
                                                39,
                                                97,
                                                39,
                                            ],
                                            span: Span {
                                                start: 42,
                                                end: 45,
                                            },
                                        },
                                        by_ref: false,
                                        unpack: false,
                                        span: Span {
                                            start: 42,
                                            end: 45,
                                        },
                                    },
                                    ArrayItem {
                                        key: None,
                                        value: String {
                                            value: [
                                                39,
                                                98,
                                                39,
                                            ],
                                            span: Span {
                                                start: 47,
                                                end: 50,
                                            },
                                        },
                                        by_ref: false,
                                        unpack: false,
                                        span: Span {
                                            start: 47,
                                            end: 50,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 41,
                                    end: 52,
                                },
                            },
                            span: Span {
                                start: 36,
                                end: 52,
                            },
                        },
                        MatchArm {
                            conditions: Some(
                                [
                                    Integer {
                                        value: [
                                            50,
                                        ],
                                        span: Span {
                                            start: 57,
                                            end: 58,
                                        },
                                    },
                                ],
                            ),
                            body: Array {
                                items: [
                                    ArrayItem {
                                        key: None,
                                        value: String {
                                            value: [
                                                39,
                                                99,
                                                39,
                                            ],
                                            span: Span {
                                                start: 63,
                                                end: 66,
                                            },
                                        },
                                        by_ref: false,
                                        unpack: false,
                                        span: Span {
                                            start: 63,
                                            end: 66,
                                        },
                                    },
                                    ArrayItem {
                                        key: None,
                                        value: String {
                                            value: [
                                                39,
                                                100,
                                                39,
                                            ],
                                            span: Span {
                                                start: 68,
                                                end: 71,
                                            },
                                        },
                                        by_ref: false,
                                        unpack: false,
                                        span: Span {
                                            start: 68,
                                            end: 71,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 62,
                                    end: 73,
                                },
                            },
                            span: Span {
                                start: 57,
                                end: 73,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 76,
                    },
                },
                span: Span {
                    start: 6,
                    end: 76,
                },
            },
            span: Span {
                start: 6,
                end: 77,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 77,
    },
}
